--- a/src/alert/alert.scss
+++ b/src/alert/alert.scss
@@ -1,3 +1,34 @@
-div {
+.alert {
+  display: none;
+  height: 10rem;
+  width: 40rem;
+  left: 50%;
+  margin-left: -20rem;
+  top: 50%;
+  margin-top: -5rem;
   background: red;
+  padding: 2rem;
+  color: antiquewhite;
+  // margin: 1rem;
+  position: absolute;
+  border-radius: .5rem;
+  p {
+    // color: black;
+  }
+  &.show{
+    display: block;
+  }
+
+
+  .closebtn{
+    cursor: pointer;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    &:hover{
+      
+    }
+  }
+  
 }
+
